--- a/CSS/master.css
+++ b/CSS/master.css
@@ -4,3 +4,33 @@
     box-sizing: border-box;
     font-family: Arial, Helvetica, sans-serif;
 }
+.container{
+    height: 100vh;
+    background-color: #808080;
+    display: grid;
+    place-items: center;
+}
+.container .content{
+    max-width: 1200px;
+    width: 900px;
+    display: flex;
+    justify-content: space-between;
+}
+.content .text-left{
+    background-color: red;
+}
+.text-left .logo{
+    font-size: 40px;
+    font-weight: 700;
+    color: aqua;
+}
+.text-left p{
+    font-size: 16px;
+    color: #000;
+    font-weight: bold;
+}
+.content .text-right{
+    background-color: blue;
+    padding: 10px;
+    border-radius: 5px;
+}
