--- a/CSS/master.css
+++ b/CSS/master.css
@@ -1,3 +1,8 @@
+:root{
+    first-color: #000;
+    second-color: #070;
+    thirth-color: #047;
+}
 *{
     padding: 0;
     margin: 0;
@@ -31,6 +36,15 @@
 }
 .content .text-right{
     background-color: blue;
-    padding: 10px;
+    padding: 12px;
     border-radius: 5px;
 }
+.content .text-right form{
+    background-color: yellow;
+    width: 350px;
+}
+.content .text-right form input{
+    width: 100%;
+
+}
+
